--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 			<h2>zxzz</h2>
 			<p>Developer+BountyBug</p>
 			<div class="card__social">
-				<a target="_black" href="https://www.facebook.com/shawdzai">
+				<a target="_black" href="https://www.facebook.com">
 					<i class="fab fa-facebook-f"></i>
 				</a>
-				<a target="_black" href="https://www.youtube.com/@zw-zwv5">
+				<a target="_black" href="https://www.youtube.com/@zxnung">
 					<i class="fab fa-youtube"></i>
 				</a>
-				<a target="_black" href="https://www.tiktok.com/@_15tontop">
+				<a target="_black" href="https://www.tiktok.com/@lovhandsome">
 					<i class="fab fa-tiktok"></i>
 				</a>
-				<a target="_black" href="https://github.com/kan1529">
+				<a target="_black" href="https://github.com/zx155">
 					<i class="fab fa-github"></i>
 				</a>
 			</div>
