--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="card__img">
 				<img src="av.png" alt="" />
 			</div>
-			<h2>zxzz</h2>
+			<h2>lovevsick</h2>
 			<p>Developer+BountyBug</p>
 			<div class="card__social">
 				<a target="_black" href="https://www.facebook.com">
